fdo#56007 - fast zip directory find to accelerate Windows Explorer thumbnail.

Change-Id: Id9436def56f40d2bb54dea35bea916bd99964653